Add return button

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -29,5 +29,6 @@
         </ol>
         <h3>Voila</h3>
         <p>Your lasagna is now ready, enjoy your meal!</p>
+        <p><a href="../index.html">Return to the main page</a></p>
     </body>
 </html>
